--- a/pointy-api/src/main/webapp/WEB-INF/web.xml
+++ b/pointy-api/src/main/webapp/WEB-INF/web.xml
@@ -21,9 +21,15 @@
     <servlet-name>apiServlet</servlet-name>
     <url-pattern>/</url-pattern>
   </servlet-mapping>
+  
+<!--  commenting since we are warring up our webapp for openShift deployment.  
+   <context-param> 
+    <param-name>log4jConfigLocation</param-name>
+    <param-value>/WEB-INF/classes/log4j.xml</param-value>
+  </context-param>  
   <listener>
     <listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
-  </listener>
+  </listener> -->
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
   </welcome-file-list>
