--- a/pointy-api/pom.xml
+++ b/pointy-api/pom.xml
@@ -171,6 +171,12 @@
             <artifactId>jackson-mapper-asl</artifactId>  
             <version>${jackson.version}</version>  
         </dependency>  
+		<dependency>
+		    <groupId>joda-time</groupId>
+		    <artifactId>joda-time</artifactId>
+		    <version>${joda.version}</version>
+		</dependency>	        
+        
 	</dependencies>
 	
 	 
